# Rattlesnake

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  activity.txt
.github/workflows/: .CI.yml.kate-swp  CI.yml
UI/: .clang-format  CMakeLists.txt  Rattlesnake.pro  check.sh  main.cpp
UI/Headers/: Block.h  QTlistofblocks.h  Scheme.h  UI.h  appinfo.h  block.h  blockwidget.h  listofblocks.h  logwidget.h  mainwindow.h  newblockwidget.h  qtlistofblocks.h  qtrequiredvariables.h  qtscheme.h  requiredvariables.h  savingwidget.h  schemewidget.h  splitter.h  uiblock.h
UI/Sources/: QTlistofblocks.cpp  Scheme.cpp  UI.cpp  appinfo.cpp  blockwidget.cpp  cfg.txt  icon.rc  listofblocks.cpp  logwidget.cpp  mainwindow.cpp  newblockwidget.cpp  qtlistofblocks.cpp  qtrequiredvariables.cpp  qtscheme.cpp  rattlesnake-ico.qrc  rattlesnake-ico.rcc  requiredvariables.cpp  schemewidget.cpp  splitter.cpp  uiblock.cpp
UI/Tests/: CMakeLists.txt  Tests.cpp
UML/: activity.txt
libs/: .gitignore  CMakeLists.txt
libs/data_processing/: CMakeLists.txt
libs/data_processing/include/: Parser.hpp  Serializer.hpp  block.hpp  parser.hpp  serializer.hpp
libs/data_processing/src/: Block.cpp  Parser.cpp  Serializer.cpp  block.cpp  parser.cpp  serializer.cpp
libs/data_processing/test/: block_tests.cpp  parser_tests.cpp  serializer_tests.cpp
libs/network/: CMakeLists.txt
libs/network/include/: INetLibrary.hpp  NetClient.hpp  NetServer.hpp  inetlibrary.hpp  netclient.hpp  netlibrary.hpp  netlibraryclient.hpp  netlibraryserver.hpp  netmessage.hpp  netserver.hpp  netsocket.hpp
libs/network/src/: NetClient.cpp  NetLibraryClient.cpp  NetLibraryServer.cpp  NetServer.cpp  NetSocket.cpp  netclient.cpp  netlibrary.cpp  netlibraryclient.cpp  netlibraryserver.cpp  netmessage.cpp  netserver.cpp  netsocket.cpp
libs/network/test/: netclient_tests.cpp  netlibraryclient_tests.cpp  netlibraryserver_tests.cpp  netserver_and_socket_tests.cpp
project/Machine/sources/: main.cpp
project/Server/headers/: AppInfo.hpp  dbhelper.hpp  netserver.hpp  server_application.hpp  user.hpp
server/: .Makefile.kate-swp  Makefile
server/deploy/: docker-compose.yml
server/deploy/mariadb/: mariadb_env.txt
server/deploy/server/: Dockerfile  cfg.txt
server/deploy/server/blocks/: AND.py  CircleArea.py  Copy.py  Difference.py  Division.py  EQUAL.py  FirstBlock.py  GetConsts.py  IMPLY.py  NAND.py  OR.py  (+11 more)
server/include/: appinfo.hpp  block.hpp  blockinfo.hpp  dbhelper.hpp  machine.hpp  machine_factory.hpp  netserver.hpp  server_application.hpp  user.hpp
server/machine/scripts/: prepare.sh
server/scripts/: .clang-format  check.sh  prepare.sh
server/server_application/include/: appinfo.hpp  block.hpp  machine_factory.hpp
server/server_application/sources/: appinfo.cpp  block.cpp  dbhelper.cpp  machine_factory.cpp  main.cpp  server_application.cpp
server/soucess_common/: block.cpp  machine_factory.cpp
server/sources_common/: appinfo.cpp  blockinfo.cpp  dbhelper.cpp  machine_factory.cpp
server/sources_machine/: machine.cpp  main.cpp  main_machine.cpp
server/sources_server_application/: block.cpp  dbhelper.cpp  machine_factory.cpp  main.cpp  main_server.cpp  server_application.cpp
server/test/: appinfo.gcno  appinfo_test.cpp  block.gcno  blockinfo_test.cpp  dbhelper.gcno  dbhelper_test.cpp  machine_factory.gcno  machine_factory_test.cpp  machine_test.cpp  server_application_test.cpp  test_machine.cpp  test_server.cpp
(+6 files in other folders)
